# llm-zoomcamp2025

./: README.md  pyproject.toml
qdrant_storage/: raft_state.json
qdrant_storage/collections/zoomcamp-rag/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/zoomcamp-rag/0/segments/4d8f9811-1144-4fb6-ae5a-5ef146801235/: mutable_id_tracker.mappings
qdrant_storage/collections/zoomcamp-rag/0/segments/4d8f9811-1144-4fb6-ae5a-5ef146801235/payload_index/: 000011.sst  IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/zoomcamp-rag/0/segments/f4f93454-59eb-4962-9a61-a66e37c02880/payload_index/: IDENTITY  LOG  MANIFEST-000005
week1/: 1.2-configuring_env.ipynb  1.6-elasticsearch.ipynb  homework.ipynb  rag-intro.ipynb
week2/: sematic_search.ipynb
