[project]
name = "llm-zoomcamp2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch==8.13.0",
    "groq>=0.26.0",
    "ipywidgets>=8.1.7",
    "minsearch>=0.0.2",
    "notebook==7.1.2",
    "openai>=1.84.0",
    "pandas>=2.3.0",
    "qdrant-client[fastembed]>=1.14.2",
    "requests>=2.32.3",
    "scikit-learn>=1.7.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]
